--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <div class="main-container">
       <!-- Navbar Start -->
@@ -26,7 +27,7 @@
         <div class="container-fluid">
           <img id="logo-img" src="/images/1.jpg" alt="" />
           <button
-            class="navbar-toggler "
+            class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -62,7 +63,7 @@
         </div>
         <!-- About Div -->
         <div class="about">
-          <h3 id="about-h3">Hello Im Ankit</h3>
+          <h3 id="about-h3">Hello I'm Ankit</h3>
           <h1 id="about-h1">Web Developer</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex
@@ -72,80 +73,149 @@
           <button class="btn btn-md btn-danger" id="about-btn">About Me</button>
         </div>
       </div>
-      <div class="skill-container">
-        <h1>Skills</h1>
-        <button class="btn btn-outline-success">JavaScript</button>
-        <button class="btn btn-outline-primary">Node</button>
-        <button class="btn btn-outline-info">Express</button>
-        <button class="btn btn-outline-warning">Python</button>
-        <button class="btn btn-outline-success">Django</button>
-        <button class="btn btn-outline-light">SQL</button>
-        <button class="btn btn-outline-warning">MongoDb</button>
-        <button class="btn btn-outline-success">HTML</button>
-        <button class="btn btn-outline-danger">CSS</button>
-        <button class="btn btn-outline-success">Bootstrap</button>
-        <button class="btn btn-outline-info">Git</button>
+
+      <div class="skills">
+        <div class="heading"><h1>Skills</h1></div>
+        <div class="skill-container">
+          <h5 class="text-success">JavaScript</h5>
+          <h5 class="text-success">Node</h5>
+          <h5 class="text-success">Express</h5>
+          <h5 class="text-success">MongoDB</h5>
+          <h5 class="text-success">Python</h5>
+          <h5 class="text-success">Django</h5>
+          <h5 class="text-success">SQL</h5>
+          <h5 class="text-success">HTML</h5>
+          <h5 class="text-success">CSS</h5>
+          <h5 class="text-success">Bootstrap</h5>
+          <h5 class="text-success">Git</h5>
+        </div>
       </div>
       <!-- Projects Div -->
       <div class="project_container">
         <h2>FEATURED PROJECTS</h2>
         <div class="row r1">
-          <div class="col-4 p1"><div class="card" style="width: 100%;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Weather App</h5>
-              <p class="card-text">Weather app made with JS, API, HTML, CSS.
-                In this app you can search current weather of a city and can see wind speed and humidity level.
-              </p>
+          <div class="col-sm-4 p1">
+            <div class="card text-center">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Weather App</h5>
+                <p class="card-text">
+                  Weather app made with JS, API, HTML, CSS. In this app you can
+                  search current weather of a city and can see wind speed and
+                  humidity level.
+                </p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
             </div>
-          </div></div>
-          <div class="col-4 p2"><div class="card" style="width: 100%;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Tic Tac App</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">View</a>
+          </div>
+          <div class="col-sm-4 p2">
+            <div class="card text-center">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Tic Tac App</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
             </div>
-          </div></div>
-          <div class="col-4 p3"><div class="card" style="width: 100%;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">View</a>
+          </div>
+          <div class="col-sm-4 p3">
+            <div class="card text-center">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
             </div>
-          </div></div>
+          </div>
         </div>
         <div class="row r2">
-            <div class="col-4 p1"><div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">View</a>
-                </div>
-              </div></div>
-            <div class="col-4 p2"><div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">View</a>
-                </div>
-              </div></div>
-            <div class="col-4 p3"><div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">View</a>
-                </div>
-              </div></div>
+          <div class="col-sm-4 p1">
+            <div class="card text-center">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
+            </div>
           </div>
+          <div class="col-sm-4 p2">
+            <div class="card text-center">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 p3">
+            <div class="card text-center">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- project div end -->
-      <div class="edu-container">
-
+      <div class="edu-container"></div>
+      <!-- Project Div End -->
+      <!-- Contact Div Startred -->
+      <div class="contact-container">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputName" class="form-label">Full Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="exampleInputName"
+              aria-describedby="nameHelp"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label"
+              >Email address</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputNumber" class="form-label"
+              >Contact No</label
+            >
+            <input type="number" class="form-control" id="exampleInputNumber" />
+          </div>
+          <button type="submit" class="btn btn-primary">Contact</button>
+        </form>
+        <div class="details"></div>
+      </div>
+      <!-- Contact Div End -->
+      <div class="footer">
+        <h3>Created by Ankit Poonia</h3>
       </div>
       <!-- main div end -->
     </div>
