--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
       <div class="container">
         <!-- Image div -->
         <div class="img-div">
-          <img id="about-img" src="/images/coding.png" alt="" />
+          <img id="about-img" src="/images/preview.png" alt="" />
         </div>
         <!-- About Div -->
         <div class="about">
@@ -96,41 +96,40 @@
         <div class="row r1">
           <div class="col-sm-4 p1">
             <div class="card text-center">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="/images/weather.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Weather App</h5>
-                <p class="card-text">
-                  Weather app made with JS, API, HTML, CSS. In this app you can
-                  search current weather of a city and can see wind speed and
-                  humidity level.
-                </p>
-                <a href="#" class="btn btn-primary">View</a>
+                <a
+                  href="https://github.com/ankitpoonia2082/JavaScript-Projects.git"
+                  class="btn btn-primary"
+                  >View</a
+                >
               </div>
             </div>
           </div>
           <div class="col-sm-4 p2">
             <div class="card text-center">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="/images/tic-tac.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Tic Tac App</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">View</a>
+                <a
+                  href="https://github.com/ankitpoonia2082/JavaScript-Projects.git"
+                  class="btn btn-primary"
+                  >View</a
+                >
               </div>
             </div>
           </div>
           <div class="col-sm-4 p3">
             <div class="card text-center">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="/images/advice.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">View</a>
+                <h5 class="card-title">Advice Generator</h5>
+                <a
+                  href="https://github.com/ankitpoonia2082/JavaScript-Projects.git"
+                  class="btn btn-primary"
+                  >View</a
+                >
               </div>
             </div>
           </div>
@@ -138,40 +137,40 @@
         <div class="row r2">
           <div class="col-sm-4 p1">
             <div class="card text-center">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="/images/clock.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">View</a>
+                <h5 class="card-title">Clock App</h5>
+                <a
+                  href="https://github.com/ankitpoonia2082/JavaScript-Projects.git"
+                  class="btn btn-primary"
+                  >View</a
+                >
               </div>
             </div>
           </div>
           <div class="col-sm-4 p2">
             <div class="card text-center">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="/images/to-do.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">View</a>
+                <h5 class="card-title">To-Do App</h5>
+                <a
+                  href="https://github.com/ankitpoonia2082/JavaScript-Projects.git"
+                  class="btn btn-primary"
+                  >View</a
+                >
               </div>
             </div>
           </div>
           <div class="col-sm-4 p3">
             <div class="card text-center">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="/images/login.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">View</a>
+                <h5 class="card-title">Instagram Login Page</h5>
+                <a
+                  href="https://github.com/ankitpoonia2082/JavaScript-Projects.git"
+                  class="btn btn-primary"
+                  >View</a
+                >
               </div>
             </div>
           </div>
@@ -182,36 +181,47 @@
       <!-- Project Div End -->
       <!-- Contact Div Startred -->
       <div class="contact-container">
-        <form>
-          <div class="mb-3">
-            <label for="exampleInputName" class="form-label">Full Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputName"
-              aria-describedby="nameHelp"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputNumber" class="form-label"
-              >Contact No</label
-            >
-            <input type="number" class="form-control" id="exampleInputNumber" />
-          </div>
-          <button type="submit" class="btn btn-primary">Contact</button>
-        </form>
-        <div class="details"></div>
+        <div class="contact-form">
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputName" class="form-label">Full Name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputName"
+                aria-describedby="nameHelp"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputNumber" class="form-label"
+                >Contact No</label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="exampleInputNumber"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Contact</button>
+          </form>
+        </div>
+        <div class="details">
+          <button>Linkedin</button>
+          <button>Github</button>
+          <button>Email</button>
+          <button>Instagram</button>
+        </div>
       </div>
       <!-- Contact Div End -->
       <div class="footer">
