--- a/templates/index.css
+++ b/templates/index.css
@@ -31,8 +31,10 @@ body{
     align-items: center;
 }
 .container img {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
+    padding: 15px;
+    /* filter: drop-shadow(3px 5px 2px rgba(255, 0, 0, 0.4)); */
   }
   
 .img-div{
@@ -44,7 +46,8 @@ body{
 
 /* Skills cotainer---------------------------- */
 .skills{
-    border: 1px solid rgb(172, 0, 0);
+    border: 1px solid gray;
+    border-radius: 10px;
     margin: 20px;
     padding: 20px;
 }
@@ -69,13 +72,20 @@ body{
     margin: 25px;
 }
 .card{
-    height: 300px;
+    height: 370px;
+}
+.card img{
+    padding: 8px;
+    height: 250px;
+    image-rendering: auto;
 }
 
 .r1,.r2{
     margin: 25px;
     /* border: 2px solid grey; */
-
+}
+.card-img-top{
+    width: 200px;
 }
 
 /* Contact form CSS---------- */
@@ -83,18 +93,33 @@ body{
     margin: 20px;
     padding: 20px;
     display: flex;
-    justify-content: center;
-    
-}
-.contact-container form{
-    width: 60%; 
-    padding: 20px;
-    border-radius: 20px;
+    /* justify-content: center; */
     border: 1px solid gray;
+    border-radius: 12px;
+}
+.contact-form{
+    width: 80%; 
+    padding: 20px;
+}
+.details,.contact-container form{
+    padding: 20px;
+}
+.details{
+    border-left: 1px solid gray;
+    width: 20%;
+}
+.details button{
+    margin: 20px;
+    padding: 10px;
+    width: 90%;
+    border: none;
+    border-radius: 10px;
+    background-color: red;
 }
 
 .footer{
     border: 1px solid red;
+    padding: 5px;
     border-radius: 15px;
     text-align: center;
     margin: 20px;
@@ -105,19 +130,36 @@ body{
 
 /* Media Query CSS-------------------------------------- */
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 600px) {
     
     .container{
         flex-direction: column;
-
+    }
+    .r1,.r2{
+        margin: 20px;
+        /* margin-top: 15px; */
+        /* border: 2px solid grey; */
     }
     .card{
         margin-top: 15px;
     }
 
+    .contact-container,.details{
+        flex-direction: column;
+        margin: 8px;
+        border: none;
+    }
 
+    .contact-form{
+        width: 100%;
+        padding: 0%;
+    }
 
-    .skill-container{
-        /* flex-direction: column; */
+    .details {
+        border-top: 1px solid gray;
+        width: 100%;
+    }
+    .details button{
+        width: 100px;
     }
   }
